adding bearer auth for apiKey and completing tests
